<package>
  <name>epson_experimental</name>
  <version>0.0.1</version>
  <description>Experimental packages for Epson manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/epson_experimental</url>
  <url type="bugtracker">https://github.com/gavanderhoorn/epson_experimental/issues</url>
  <url type="repository">https://github.com/gavanderhoorn/epson_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>epson_spelp_driver</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
