<package>
  <name>epson_spelp_driver</name>
  <version>0.0.1</version>
  <description>
   <p>
     ROS-Industrial nodes for interfacing with Epson robot controllers.
   </p>
   <p>
     This package is part of the ROS-Industrial program and contains nodes
     for interfacing with Epson industrial robot controllers that support
     the SPEL+ programming environment.
   </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/epson_spelp_driver</url>
  <url type="bugtracker">https://github.com/gavanderhoorn/epson_experimental/issues</url>
  <url type="repository">https://github.com/gavanderhoorn/epson_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.9.55">roslaunch</build_depend>

  <run_depend>industrial_robot_client</run_depend>
</package>
