<?xml version="1.0"?>
<package format="2">
  <name>epson_spelp_driver</name>
  <version>0.1.0</version>
  <description>
   <p>
     ROS-Industrial nodes for interfacing with Epson robot controllers.
   </p>
   <p>
     This package is part of the ROS-Industrial program and contains nodes
     for interfacing with Epson industrial robot controllers that support
     the SPEL+ programming environment.
   </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/epson_spelp_driver</url>
  <url type="bugtracker">https://github.com/gavanderhoorn/epson_experimental/issues</url>
  <url type="repository">https://github.com/gavanderhoorn/epson_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>driver</tag>
        <tag>simple_message</tag>
        <tag>epson</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>SPEL+</tag>
      </tags>
    </rosindex>
  </export>
</package>
